--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,16 @@ body {
     font-family: 'Roboto',
     sans-serif;
 }
+/*--
+#2196F3 голубой
+#000000 черный в лого
+#212121 основной цвет шрифта
+#757575 цвет шрифта номера телефона и доп. текста
+#FFFFFF белый
+#188CE8 цвет кнопки
+#2F303A цвет фона
+
+--*/
 
 .visually-hidden {
     position: absolute;
@@ -14,4 +24,161 @@ body {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
     margin: -1px;
+}
+
+/* -------------------HEADER------------------- */
+.header{
+    background: #FFFFFF;
+}
+.header-logo {
+    font-family: 'Raleway',
+    sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+}
+.header-logo-left{
+    color: #2196F3;
+}
+.header-logo-right{
+    color: #000000;
+}
+.header-navigation-link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #212121;
+}
+.header-navigation-link:hover,
+.header-navigation-link:focus {
+    color: #2196F3;
+}
+.header-link{
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #757575;
+}
+.header-link:hover,
+.header-link:focus {
+    color: #2196F3;
+}
+/* -------------------HERO------------------- */
+.hero {
+    background: #2F303A;
+}
+.hero-title{
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+.hero-btn{
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+}
+.hero-btn:hover,
+.hero-btn:focus {
+    background: #188CE8;
+}
+
+
+/* ----------------BENEFITS---------------- */
+.benefits-title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #212121;
+    }
+.benefits-text{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+/* ----------------ABOUT---------------- */
+.about-title{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+}
+/* ----------------TEAM---------------- */
+.team {
+    background: #F5F4FA;
+}
+.team-title{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+}
+.team-item-title{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+
+}
+.team-item-text{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+/* ----------------FOOTER---------------- */
+.footer{
+    background: #2F303A;
+}
+.footer-logo{
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+}
+.footer-logo-left{
+    color: #2196F3;
+}
+.footer-logo-right{
+    color: #FFFFFF;
+}
+.footer-link{
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: rgba(255, 255, 255, 0.6);
+}
+.footer-link-address{
+    color: #FFFFFF;
+}
+.footer-link:hover,
+.footer-link:focus {
+    color: #2196F3;
 }
