--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,9 @@
     --logo-right-color: #000000;
     --main-backgroun-color: #FFFFFF;
     --second-backgroun-color: #2F303A;
+    --third-backgroun-color: #F5F4FA;
     --backgroun-text-color: #FFFFFF;
+    --footer-link: rgba(255, 255, 255, 0.6);
 }
 
 body {
@@ -28,9 +30,15 @@ body {
     color: var(--main-text-color);
     letter-spacing: 0.03em;
 }
+button {
+    cursor: pointer;
+}
 .list{
     list-style: none;
 }
+.link {
+    text-decoration: none;
+} 
 .link:hover,
 .link:focus {
     color: var(--accent-color);
@@ -74,7 +82,6 @@ body {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    text-decoration: none;
 }
 .header-link{
     font-weight: 500;
@@ -82,7 +89,6 @@ body {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--second-text-color);
-    text-decoration: none;
 }
 
 /* -------------------HERO------------------- */
@@ -119,13 +125,11 @@ body {
 
 /* ----------------BENEFITS---------------- */
 .benefits-title {
-    font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
 }
 .benefits-text{
-    font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     color: var(--second-text-color);
@@ -133,7 +137,6 @@ body {
 
 /* ----------------ABOUT---------------- */
 .about-title{
-    font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
@@ -141,10 +144,9 @@ body {
 
 /* ----------------TEAM---------------- */
 .team {
-    background: #F5F4FA;
+    background: var(--third-backgroun-color);
 }
 .team-title{
-    font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
@@ -193,12 +195,11 @@ body {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
-    color: rgba(255, 255, 255, 0.6);
-    text-decoration: none;
+    color: var(--footer-link)
 }
 .footer-link-address{
     color: var(--backgroun-text-color);
-    text-decoration: none;
+    
 }
 
 
@@ -209,7 +210,7 @@ body {
     font-size: 16px;
     line-height: 1.63;
     text-align: center;
-    background: #F5F4FA;
+    background: var(--third-backgroun-color);
     border-radius: 4px;    
 }
 .filters-btn:hover,
@@ -218,21 +219,17 @@ body {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
         0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
-    color: #FFFFFF;
+    color: var(--backgroun-text-color);
 }
 .projects-item{
-    background: #FFFFFF;
-    border: 1px solid #EEEEEE;
-    box-sizing: border-box;
-}
-.projects-title{
-    font-weight: 700;
+    background: var(--main-backgroun-color);
+}   
+.projects-title {;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
 }
 .projects-text{
-    font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
     color: var(--second-text-color);
